# calhacks12

./: .gitignore  README.md  project.godot
assets/: cat 3 (64х64).png.import  chatbox.png.import  chatbox.png~  hi crater.jpeg.import
backends/: .env.template  .stack_pids  CREAO.md  Dockerfile  README.md  TODO.md  alembic.ini  pyproject.toml  suggested-path.md
backends/app/: __init__.py  agent_server.py  config.py  database.py  main.py  mcp_server.py  middleware.py  models.py  schemas.py
backends/app/api/: routes_ai.py  routes_memory.py  routes_todos.py
backends/app/services/: __init__.py  agent_router.py  ai_service.py  chroma_service.py  todo_service.py
backends/data/: demo_tasks.json  sample_prompts.json
backends/migrations/: README.md  env.py
backends/mocks/: ai_generate_sample.json  memory_search_sample.json  todo_tree_sample.json
backends/scripts/: eval_prompt.py  load_demo_data.py  run_mock_server.py  start_stack.sh  stop_stack.sh
backends/tests/: conftest.py  test_agent_router.py  test_ai_service.py  test_chroma_service.py  test_todo_service.py
docs/: API.md  GodotIntegration.md  MCPGuide.md  Postman.md  PostmanCollection.json  PostmanMCP.json  claude_desktop_config.template.json  creao_mcp_schema.json  mcp_openapi_schema.json  selected-sponsors.md  sponsors.csv  sponsors.csv.import  sponsors.md
resources/: floor_tileset.tres
scenes/: blank_area.tscn  cat.tscn  cow.tscn  locked_room.tscn  main.tscn  pick_furniture.tscn  popup.tscn  room_layout_1.tscn  room_layout_2.tscn  room_layout_3.tscn  room_layout_4.tscn  room_layout_5.tscn  (+2 more)
(+556 files in other folders)
