[project]
name = "ai-todo-backend"
version = "0.1.0"
description = "LLM-assisted hierarchical todo backend for the Godot task game"
readme = "README.md"
authors = [{ name = "CalHacks Team" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.4.0",
    "openai>=1.50.0",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "fastmcp>=0.4.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "alembic>=1.13.0"
]

[project.scripts]
task-mcp = "app.mcp_server:main"

[tool.uv]
package = false
managed = true

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
